# CruftCutter-Go

./: .gitignore  README.md  cookiecutter.json
{{ cookiecutter.app_name }}/: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  Makefile  README.md  go.mod  main.go  pyproject.toml
{{ cookiecutter.app_name }}/collector/: collectXXX.go  exporter.go  scrapeFn.go
{{ cookiecutter.app_name }}/common/: define.go  error.go  pass.go  utils.go  utils_linux.go  utils_windows.go
{{ cookiecutter.app_name }}/config/: config.go
{{ cookiecutter.app_name }}/docs/: 标准框架使用文档.md
{{ cookiecutter.app_name }}/logger/: hook.go  logger.go  logger_darwin.go  logger_linux.go  logger_windows.go  rotatelogs.go
